<resources>
    <string name="app_name">Tracking_App</string>

    <string name="session_preference">session_preferences</string>
    <string name="user_preference">user_preferences</string>
    <string name="rememberMeIdentifier">remember_me</string>
    <string name="login_title">Authentification</string>
    <string name="label_username">Nom d\'utilisateur</string>
    <string name="label_password">Mot de passe</string>
    <string name="rememberMeLabel">Souviens de moi</string>
    <string name="login">S\'authentifier</string>
    <string name="empty_input_message">Remplissez le champ</string>
    <string name="incorrest_input_login">Nom d\'utilisateur ou mot de passe incorrect</string>
    <string name="error_client_info">Désolé ! \nUn problème vient de survenir</string>
    <string name="no_internet_message">Vous n\'êtes pas connecté à l\'internet</string>
    <string name="title_activity_test">TestActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_hello">HelloActivity</string>
    <string name="title_activity_GeolocationActivity">GeolocationActivity</string>


    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login1">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>


    <!-- Geolocation Service Info -->

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logOut">Sortir</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_events">Events</string>
    <string name="menu_map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="roadMapList">
        <item>Roadmap 1</item>
        <item>Roadmap 2</item>
        <item>Roadmap 3</item>
    </string-array>

</resources>